--- a/app/views/milestones/new.html.erb
+++ b/app/views/milestones/new.html.erb
@@ -1,7 +1,25 @@
-name
+<% header = t('milestones.new_header', goal_name: @goal.name) %>
 
-description
+<div class="flex justify-between">
+  <%= render 'layouts/page_header', header: header %>
+</div>
 
-goal
+<div class="flex flex-col">
+  <%= form_for @milestone, url: goal_milestones_path(@goal) do |f| %>
+    <div class="flex flex-col pb-4">
+      <%= f.label :name, t('milestones.new.name_label'), class: "text-2xl font-medium pb-4 select-none" %>
+      <%= f.text_field :name, class: "text-2xl p-4 rounded-md border-gray-200", autofocus: true %>
+      <%= render 'layouts/forms/input_error', model: @milestone, field: :name %>
+    </div>
 
-complete
+    <div class="flex flex-col pb-4">
+      <%= f.label :description, t('milestones.new.description_label'), class: "text-2xl font-medium pb-4 select-none" %>
+      <%= f.text_area :description, class: "text-2xl p-4 rounded-md border-gray-200" %>
+      <%= render 'layouts/forms/input_error', model: @milestone, field: :description %>
+    </div>
+
+    <div class="flex w-100">
+      <%= f.submit nil, class: primary_button("ml-auto") %>
+    </div>
+<% end %>
+</div>
