--- a/app/views/milestones/edit.html.erb
+++ b/app/views/milestones/edit.html.erb
@@ -1,8 +1,8 @@
-<% header = t('milestones.update_header', goal_name: @goal.name) %>
-
-<div class="flex justify-between">
-  <%= render 'layouts/page_header', header: header %>
-</div>
+<%= render 'layouts/page_header', header: t('milestones.update_header', goal_name: @goal.name) do %>
+  <%= button_to goal_milestone_path(@milestone), method: :delete, form: { data: { turbo_confirm: t('milestones.destroy.confirmation', name: @milestone.name) } }, class: destroy_button("ml-auto"), 'aria-label': 'Delete' do %>
+    <%= heroicon "trash", variant: "solid", options: { class: "w-5 h-5" } %>
+  <% end %>
+<% end %>
 
 <div class="flex flex-col pb-4">
   <%= form_for @milestone, url: goal_milestone_path(@goal, @milestone) do |f| %>
