Added milestone to task view

--- a/app/views/tasks/_task.html.erb
+++ b/app/views/tasks/_task.html.erb
@@ -23,6 +23,9 @@
             <% else  %>
               <%= t('common.adhoc_task') %>
             <% end %>
+            <% if vm.show_milestone? %>
+              | <%= t('milestones.milestone') %>: <%= vm.milestone.name %>
+            <% end %>
           </div>
         </div>
         <% if vm.show_context? %>
