--- a/app/views/goals/_goal_list.html.erb
+++ b/app/views/goals/_goal_list.html.erb
@@ -2,7 +2,7 @@
   <div class="space-y-4 pb-4" data-controller="goal-list">
     <% @goals.each do |goal| %>
       <div
-        class="flex border rounded p-4 cursor-pointer border-gray-300 select-none"
+        class="flex border rounded p-4 cursor-pointer border-gray-300 select-none shadow hover:shadow-md"
         id="goal-list-item-<%= goal.id %>"
         data-goal-id="<%= goal.id %>"
       >
