--- a/app/views/goals/index.html.erb
+++ b/app/views/goals/index.html.erb
@@ -1,6 +1,5 @@
-<div class="flex justify-between">
-  <%= render 'layouts/page_header', header: t('goals.header') %>
+<%= render 'layouts/page_header', header: t('goals.header'), class: "w-full" do %>
   <%= link_to t('goals.new_button'), new_goal_path, class: primary_button  %>
-</div>
+<% end %>
 
 <%= render 'goals/goal_list' %>
