Updated milestone styling

--- a/app/components/alerts/base_component.html.erb
+++ b/app/components/alerts/base_component.html.erb
@@ -1,4 +1,4 @@
-<div data-controller="alert" data-alert-target="alert" class="<%="my-4 m-auto w-100 bg-#{color}-100 border-#{color}-500 border rounded text-#{color}-900 px-4 py-3 shadow-sm" %>" role="alert">
+<div data-controller="alert" data-alert-target="alert" class="<%="my-4 m-auto w-100 bg-#{color}-100 border-#{color}-500 border rounded text-#{color}-900 px-4 py-3 shadow hover:shadow-md" %>" role="alert">
   <div class="flex">
     <div>
       <p><span class="font-bold"><%= context %>: </span> <%= @message %></p>
