--- a/app/views/milestones/index.html.erb
+++ b/app/views/milestones/index.html.erb
@@ -15,7 +15,7 @@
   <div class="pb-4">
     <% if @active_milestone %>
       <div
-        class="flex border rounded p-4 cursor-pointer border-gray-300 select-none"
+        class="flex border rounded p-4 cursor-pointer border-gray-300 select-none shadow hover:shadow-md"
         id="inactive-milestone-list-item-<%= @active_milestone.id %>"
       >
         <div class="w-full">
@@ -26,8 +26,8 @@
           <% end %>
         </div>
       </div>
-      <% else %>
-      <div class="text-2xl p-4 border rounded-md border-gray-200">
+    <% else %>
+      <div class="text-2xl p-4 border rounded-md border-gray-200 cursor-not-allowed shadow">
         <%= t('milestones.no_active') %>
       </div>
     <% end %>
@@ -40,7 +40,7 @@
   <div class="space-y-4">
     <% @inactive_milestones.each do |milestone| %>
       <div
-        class="flex border rounded p-4 cursor-pointer border-gray-300 select-none"
+        class="flex border rounded p-4 cursor-not-allowed border-gray-300 select-none shadow"
         id="inactive-milestone-list-item-<%= milestone.id %>"
       >
         <div class="w-full">
