--- a/app/views/milestones/new.html.erb
+++ b/app/views/milestones/new.html.erb
@@ -7,14 +7,14 @@
 <div class="flex flex-col">
   <%= form_for @milestone, url: goal_milestones_path(@goal) do |f| %>
     <div class="flex flex-col pb-4">
-      <%= f.label :name, t('milestones.new.name_label'), class: "text-2xl font-medium pb-4 select-none" %>
-      <%= f.text_field :name, class: "text-2xl p-4 rounded-md border-gray-200", autofocus: true %>
+      <%= f.label :name, t('milestones.new.name_label'), class: label_class("text-xl") %>
+      <%= f.text_field :name, class: text_field_class("text-xl"), autofocus: true %>
       <%= render 'layouts/forms/input_error', model: @milestone, field: :name %>
     </div>
 
     <div class="flex flex-col pb-4">
-      <%= f.label :description, t('milestones.new.description_label'), class: "text-2xl font-medium pb-4 select-none" %>
-      <%= f.text_area :description, class: "text-2xl p-4 rounded-md border-gray-200" %>
+      <%= f.label :description, t('milestones.new.description_label'), class: label_class("text-xl") %>
+      <%= f.text_area :description, class: text_field_class("text-xl") %>
       <%= render 'layouts/forms/input_error', model: @milestone, field: :description %>
     </div>
 
