--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,12 +21,18 @@
 </head>
 
 <body class="h-screen bg-white">
-<main class="w-full max-w-xl mx-auto px-5 h-full">
+<main class="w-full max-w-xl mx-auto px-5 h-full flex flex-col">
   <% if current_user %>
     <%= render 'layouts/navigation' %>
   <% end %>
   <%= render 'layouts/alerts' %>
   <%= yield %>
+
+  <div class="mt-auto text-sm flex items-center pb-2">
+    <p class="text-xs text-gray-200 m-auto">
+      <%= t('global.application_version', version: ApplicationVersion.version) %>
+    </p>
+  </div>
 </main>
 </body>
 </html>
