Added no tasks prompt

--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -38,7 +38,7 @@
       <% end %>
       </div>
 
-  <% if current_user.has_goals? %>
+  <% if current_user.goals? %>
     <%= render 'tasks/task_list' %>
   <% else %>
     <%= render 'create_goal_prompt' %>
