Fix for app version overlaying tasks in some scenarios

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,7 +20,7 @@
   <%= yield(:head) %>
 </head>
 
-<body class="h-screen bg-white">
+<body class="h-full bg-white">
 <main class="w-full max-w-xl mx-auto px-5 h-full flex flex-col">
   <% if current_user %>
     <%= render 'layouts/navigation' %>
