--- a/app/views/me/edit.html.erb
+++ b/app/views/me/edit.html.erb
@@ -1,11 +1,24 @@
 <div class="flex flex-col">
-  <%= form_with model: @me, url: me_path do |f| %>
-    <div class="flex flex-col pb-4">
+  <%= form_with model: @me, url: me_path, class: "space-y-4" do |f| %>
+    <div class="flex flex-col">
       <%= f.label :email, t('global.email_address'), class: label_class("text-xl") %>
       <%= f.text_field :email, class: text_field_class("text-xl"), disabled: true %>
     </div>
 
-    <div class="flex flex-col pb-4">
+    <div class="flex space-x-4">
+      <div>
+        <%= f.label :first_name, t('global.first_name'), class: label_class("text-xl") %>
+        <%= f.text_field :first_name, class: text_field_class("text-xl") %>
+        <%= render 'layouts/forms/input_error', model: @me, field: :first_name %>
+      </div>
+      <div>
+        <%= f.label :last_name, t('global.last_name'), class: label_class("text-xl") %>
+        <%= f.text_field :last_name, class: text_field_class("text-xl") %>
+        <%= render 'layouts/forms/input_error', model: @me, field: :last_name %>
+      </div>
+    </div>
+
+    <div class="flex flex-col">
       <%= f.label :time_zone, t('global.time_zone'), class: label_class("text-xl") %>
       <%= f.time_zone_select :time_zone, nil,{}, {:class => text_field_class("text-xl")} %>
     </div>
