--- a/app/components/navigation/navigation_user_item_component.html.erb
+++ b/app/components/navigation/navigation_user_item_component.html.erb
@@ -1,6 +1,10 @@
 <%= link_to @path, class: "h-10 w-10 rounded-full bg-#{bg_color} !ml-auto" do %>
-  <p class="text-white text-xl flex items-center justify-center w-full h-full">
-    <%= user_initials(user: @user) %>
-  </p>
+  <% if @user.avatar.attached? %>
+    <%= image_tag @user.avatar.variant(:thumb), class: "rounded-full" %>
+  <% else %>
+    <p class="text-white text-xl flex items-center justify-center w-full h-full">
+      <%= user_initials(user: @user) %>
+    </p>
+  <% end %>
 <% end %>
 
