--- a/app/views/me/edit.html.erb
+++ b/app/views/me/edit.html.erb
@@ -1,14 +1,14 @@
 <div class="flex flex-col">
-  <%= form_with model: @me, url: me_path, class: "space-y-4" do |f| %>
+  <%= form_with model: current_user, url: me_path, class: "space-y-4" do |f| %>
 
     <div class="flex flex-col items-center justify-center">
       <div class="pb-4">
-        <% if @me.avatar.attached? %>
-          <%= image_tag @me.avatar.variant(:profile), class: "rounded-full" %>
+        <% if current_user.avatar.attached? %>
+          <%= image_tag current_user.avatar.variant(:profile), class: "rounded-full" %>
         <% else %>
           <div class="h-40 w-40 rounded-full bg-indigo-500">
             <p class="text-white text-7xl flex items-center justify-center w-full h-full">
-              <%= user_initials(user: @user) %>
+              <%= user_initials(user: current_user) %>
             </p>
           </div>
         <% end %>
@@ -28,12 +28,12 @@
       <div>
         <%= f.label :first_name, t('global.first_name'), class: label_class("text-xl") %>
         <%= f.text_field :first_name, class: text_field_class("text-xl") %>
-        <%= render 'layouts/forms/input_error', model: @me, field: :first_name %>
+        <%= render 'layouts/forms/input_error', model: current_user, field: :first_name %>
       </div>
       <div>
         <%= f.label :last_name, t('global.last_name'), class: label_class("text-xl") %>
         <%= f.text_field :last_name, class: text_field_class("text-xl") %>
-        <%= render 'layouts/forms/input_error', model: @me, field: :last_name %>
+        <%= render 'layouts/forms/input_error', model: current_user, field: :last_name %>
       </div>
     </div>
 
